wier/force-app/main/default/objects/Effectiveness_Monitoring__c/Effectiveness_Monitoring__c.object-meta.xml
<CustomObject>
    <label>Effectiveness Monitoring</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Monitoring</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Effectiveness Monitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>