wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <inlineHelpText>Enter the Date, When the Assessment has Done</inlineHelpText>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>