wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Assessment_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Done By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Un-Authorized User Name : Please Select Your User Name</errorMessage>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Effectiveness_Monitoring</relationshipName>
    <type>Lookup</type>
</CustomField>