wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Assessment_Plan_Period__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Plan_Period__c</fullName>
    <inlineHelpText>Enter the Duration of Time for Monitoring a Training Session, In Numerical Format.</inlineHelpText>
    <label>Assessment Plan Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>