wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter Your Comments for this Assessment</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>