wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personnel</label>
    <referenceTo>compliancequest__SQX_Personnel__c</referenceTo>
    <relationshipLabel>Effectiveness Monitoring</relationshipLabel>
    <relationshipName>Effectiveness_Monitoring</relationshipName>
    <type>Lookup</type>
</CustomField>