wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Personnel_Name__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Name__c</fullName>
    <formula>Personnel__r.compliancequest__Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnel Name</label>
    <type>Text</type>
</CustomField>