wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Training_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Training_Effectiveness__c</fullName>
    <label>Training Effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>In Effective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>