wier/force-app/main/default/objects/Effectiveness_Monitoring__c/fields/Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Training_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Session</label>
    <referenceTo>compliancequest__SQX_Training_Session__c</referenceTo>
    <relationshipLabel>Effectiveness Monitoring</relationshipLabel>
    <relationshipName>Effectiveness_Monitoring</relationshipName>
    <type>Lookup</type>
</CustomField>